컵케익으로 수정

--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
       <div></div>
       <div></div>
     </header>
+
+
+    <div> 
+      <nav>
+        <li>나만의 케이크</li>
+        <li>예시 보기</li>
+        <li>스토어</li>
+        <li>인하우스</li>
+      </nav>
+    </div>
+
+    <div class="cake-img">
+
+
+    </div>
   </div>
 </body>
 <script src="./js/index.js"></script>
